# aplt

./: .gitignore  Makefile  README.txt  ch10.agda  exist-typing.hs
TODOLists/: TODO.txt
lang/: .gitignore  AST.hi  AST.hs  AbsLang.hs  DocLang.txt  Evaluator.hs  Lang.cf  LexLang.x  Main.cabal  Main.hs  Makefile  ParLang.y  Parser.hs  PrintLang.hs  README.txt  Setup.hs  SkelLang.hs  TODO.txt  TestLang.hs  ex1
lang/Lang/: .gitignore  Abs.hi  Abs.hs  Abs.hs.bak  Doc.txt  Doc.txt.bak  ErrM.hs  Lex.hi  Lex.hs  Lex.x  Lex.x.bak  Par.hi  Par.hs  Par.info  Par.y  Par.y.bak  Print.hi  Print.hs  Print.hs.bak  Skel.hi  Skel.hs  Skel.hs.bak  Test.hi  Test.hs
lang/dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes
lang/examples/: AllType.bb  App.bb  ArrType.bb  BigNum.bb  BoolAndNatSum.bb  Case.bb  ChangesMade.txt  DoubleLet.bb  ExplicitProd.bb  Guard.bb  If.bb  InfiniteSearch.bb  Inj.bb  InterLeaveRepeat.bb  Interleave.bb  Iter.bb  Lambda.bb  LeftId.bb  Let.bb  LimitedDistNat.bb  Prod.bb  Prod2.bb  ProdDistr.bb  RepeatedApp.bb  TODOLet.bb  TODOTAKEN.bb  Take0To2.bb  Two.bb  TypeApp.bb  TypeLambda.bb  WeirdDouble.bb  WordsOfLenghts.bb  WrongApp.bb  WrongCase.bb  WrongIf.bb  WrongIf2.bb  emptyDist.bb  ex1.bb  ex2.bb  ex3.bb  (+3 more)
nonProjectStuff/: Dependencies  E.hs  Evaluator.hs  Induction.hs  SystemT.hs  ski.hs
